--- a/style.css
+++ b/style.css
@@ -11,12 +11,17 @@ body, html {
     justify-content: center;
     align-items: center;
 }
-
+p {
+    justify-self:  flex-start;
+    font-size: 64px;
+    font-style:oblique;
+}
 .calc {
-    justify-content: center;
     width: 400px;
     background-color: #dcd5da;
     padding: 24px;
+    border: solid black;
+    border-radius: 2px;
 }
 .calcbtns {
     display: grid;
@@ -24,17 +29,25 @@ body, html {
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 15px;
     margin-top: 15px;
+    height: 500px;
 }
 
 .btn{
+    font-size: 24px;
     background-color: #bec3d4;
+    border: solid;
+    border-radius: 2px;
 
 }
 
 .number {
+    border: solid black;
+    font-size: 36px;
     background-color: #E8E8E8;
     text-align: right;
-    padding: 10px;
+    padding: 20px;
+    width: 360px;
+    height: 40px;
 }
 
 .zero {
