--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body, html {
 p {
     justify-self:  flex-start;
     font-size: 64px;
-    font-style:oblique;
+    font-style: italic;
 }
 .calc {
     width: 400px;
